public abstract partial class Entity
{
    protected static class EntityAnimationConsts
    {
        public const string IS_MOVING = "isMoving";
        public const string IS_FALLING = "isFalling";
        public const string IS_KNOCKED_OUT = "isKnockedOut";
        public const string IS_WAKING_UP = "isWakingUp";
        public const string HAS_FIREARM = "hasFirearm";
        public const string JUMP_TRIGGER = "Jump";
        public const string ATTACK_TRIGGER = "Attack";
        public const string STUN_TRIGGER = "Stun";
        public const string DAMAGE_TRIGGER = "Damage";
        public const string LAND_TRIGGER = "Land";
        public const string KNOCKOUT_TRIGGER = "Knockout";
        public const string WAKE_UP_TRIGGER = "WakeUp";
        public const string RECOVER_TRIGGER = "Recover";
    }
}
